# proxmox-offline-mirror

./: .gitignore  Cargo.toml  Makefile  README  defines.mk
debian/: changelog  control  control.docs  control.extra  debcargo.toml  proxmox-apt-repo.bc  proxmox-offline-mirror-docs.lintian-overrides  proxmox-offline-mirror-helper.bash-completion  proxmox-offline-mirror-helper.bc  proxmox-offline-mirror-helper.install  proxmox-offline-mirror.bash-completion  proxmox-offline-mirror.bc  proxmox-offline-mirror.install  rules
docs/: Makefile  command-syntax.rst  conf.py  configuration-files.rst  epilog.rst  index.rst  installation.rst  introduction.rst  offline-keys.rst  offline-media.rst  offline-mirror.rst  pom-copyright.rst
docs/_templates/: sidebar-header.html
docs/config/mirror/: man5.rst
docs/examples/: nginx-conf
docs/proxmox-apt-repo/: man1.rst
docs/proxmox-offline-mirror/: description.rst  man1.rst
docs/proxmox-offline-mirror-helper/: description.rst  man1.rst
src/: config.rs  lib.rs  medium.rs  mirror.rs  pool.rs  snapshot.rs  subscription.rs  types.rs  verifier.rs
src/helpers/: mod.rs  tty.rs  verifier.rs
