[package]
name = "proxmox-offline-mirror"
version = "0.6.6"
authors = ["Proxmox Support Team <support@proxmox.com>"]
edition = "2021"
license = "AGPL-3"
description = "Proxmox offline repository mirror and subscription key manager"
rust-version = "1.70"

exclude = ["debian"]

[dependencies]
anyhow = "1.0"
base64 = "0.13"
bzip2 = "0.4"
flate2 = "1.0.22"
globset = "0.4.8"
hex = "0.4.3"
lazy_static = "1.4"
nix = "0.26.1"
openssl = "0.10"
regex = "1.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sequoia-openpgp = { version = "1.12" }
walkdir = "2.3.1"
xz2 = "0.1"

proxmox-apt = { version = "0.10.9" }
proxmox-async = "0.4"
proxmox-http = { version = "0.9", features = [ "client-sync", "client-trait" ]}
proxmox-router = { version = "2", features = [ "cli" ], default_features = false }
proxmox-schema = { version = "3", features = [ "api-macro" ] }
proxmox-section-config = "2"
proxmox-serde = "0.1"
proxmox-subscription = { version = "0.4.2", features = [ "api-types" ] }
proxmox-sys = { version = "0.5", features = [ "timer" ] }
proxmox-time = "2"
